--- a/charts/database/Chart.yaml
+++ b/charts/database/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: SQLExpressDatabase
+name: sql-express
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
