--- a/charts/database/templates/deployment.yaml
+++ b/charts/database/templates/deployment.yaml
@@ -30,7 +30,7 @@ spec:
       containers:
         - name: {{ .Chart.Name }}
           env:
-            {{- toYaml .Values.securityContext | nindent 12 }}
+            {{- toYaml .Values.podVariables | nindent 12 }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
