--- a/charts/database/templates/deployment.yaml
+++ b/charts/database/templates/deployment.yaml
@@ -40,12 +40,10 @@ spec:
               containerPort: 1433
               protocol: TCP
           livenessProbe:
-            httpGet:
-              path: /
+            tcpSocket:
               port: http
           readinessProbe:
-            httpGet:
-              path: /
+            tcpSocket:
               port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
