--- a/charts/database/values.yaml
+++ b/charts/database/values.yaml
@@ -50,12 +50,12 @@ service:
   port: 1433
 
 ingress:
-  enabled: false
+  enabled: true
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: chart-example.local
+    - host: sql-express.local
       paths: []
   tls: []
   #  - secretName: chart-example-tls
