--- a/charts/database/templates/ingress.yaml
+++ b/charts/database/templates/ingress.yaml
@@ -11,10 +11,10 @@ metadata:
   name: {{ $fullName }}
   labels:
     {{- include "example.labels" . | nindent 4 }}
-  {{- with .Values.ingress.annotations }}
-  annotations:
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
+  # {{- with .Values.ingress.annotations }}
+  # annotations:
+  #   {{- toYaml . | nindent 4 }}
+  # {{- end }}
 spec:
   rules:
     {{- range .Values.ingress.hosts }}
