--- a/charts/database/values.yaml
+++ b/charts/database/values.yaml
@@ -51,7 +51,7 @@ service:
 
 ingress:
   enabled: true
-  annotations: []
+  annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
