--- a/charts/database/templates/ingress.yaml
+++ b/charts/database/templates/ingress.yaml
@@ -20,7 +20,7 @@ spec:
           pathType: Prefix
             backend:
               service:
-                name: {{ include "example.fullname" . }}
+                name: sql-express
                 port:
                   number: {{ $svcPort }}
           {{- end }}
