--- a/charts/database/templates/ingress.yaml
+++ b/charts/database/templates/ingress.yaml
@@ -5,6 +5,8 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ $fullName }}
+  annotations:
+    kubernetes.io/ingress.class: nginx
 spec:
   rules:
   {{- range .Values.ingress.hosts }}
