--- a/charts/database/templates/ingress.yaml
+++ b/charts/database/templates/ingress.yaml
@@ -6,7 +6,7 @@ kind: Ingress
 metadata:
   name: {{ $fullName }}
   annotations:
-    kubernetes.io/ingress.class: nginx
+    kubernetes.io/ingress.class: "nginx"
 spec:
   rules:
   {{- range .Values.ingress.hosts }}
